@@ -73,11 +73,11 @@ SchemaPropertiesPanel.loadAllAndCacheNone=Load all Schemas, cache none
 SchemaPropertiesPanel.loadAndCacheAll=Load all and cache all Schemas
 
 SchemaPropertiesPanel.specifySchemasByLikeString=Load schemas filtered by name
-SchemaPropertiesPanel.specifySchemasByLikeString.tooltip=Use % and _ as placeholders: % means zero or many characters, _ means one single character.
+SchemaPropertiesPanel.specifySchemasByLikeString.tooltip=Enter comma separated list of filter strings. Use % and _ as placeholders: % means zero or many characters, _ means one single character.
 SchemaPropertiesPanel.specifySchemasByLikeString.include=Include
 SchemaPropertiesPanel.specifySchemasByLikeString.exclude=Exclude
 
-SchemaPropertiesPanel.specifySchemasByLikeString.tooltip.long.html=<html>Use % and _ as placeholders: % means zero or many characters, _ means one single character.\
+SchemaPropertiesPanel.specifySchemasByLikeString.tooltip.long.html=<html>Enter comma separated list of filter strings. Use % and _ as placeholders: % means zero or many characters, _ means one single character.\
   <br><br><b>Note:</b><br>The filter by name feature was introduced especially for databases with very many Schemas.\
   <br>It may help to shorten SQuirreL's startup and shutdown time.\
   <br>If this feature is used the Schema table should be cleared, too.</html>
